Add hero section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,19 @@
         </nav>
     </header>
     <main>
-
+        <div class="hero">
+            <div class="container">
+                <section class="text">
+                    <h1>This website is awesome</h1>
+                    <p>
+                        This website has some subtext (and cool pigs) that goes here under the main title. It's a
+                        smaller font and the color is lower contrast.
+                    </p>
+                    <button>Sign up</button>
+                </section>
+                <img src="./images/pig-hero.jpg" alt="A big gray boar">
+            </div>
+        </div>
     </main>
     <footer>
 
