Add info section, add image credits to README.md

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <header>
         <nav class="navbar">
             <div class="container">
-                <div class="logo">Header Logo</div>
+                <div class="logo">Piggy Logo</div>
                 <ul class="navlinks">
-                    <li><a href="#">header link one</a></li>
-                    <li><a href="#">header link two</a></li>
-                    <li><a href="#">header link three</a></li>
+                    <li><a href="#">header pig one</a></li>
+                    <li><a href="#">header pig two</a></li>
+                    <li><a href="#">header pig three</a></li>
                 </ul>
             </div>
         </nav>
@@ -23,14 +23,36 @@
         <div class="hero">
             <div class="container">
                 <section class="text">
-                    <h1>This website is awesome</h1>
+                    <h1>The piggies are awesome</h1>
                     <p>
-                        This website has some subtext (and cool pigs) that goes here under the main title. It's a
-                        smaller font and the color is lower contrast.
+                        This website has some cool and awesome and amazing pigs and some nonsensical text. It's full of love and appreciation towards pigs.
                     </p>
-                    <button>Sign up</button>
+                    <button>Pet a pig</button>
                 </section>
-                <img src="./images/pig-hero.jpg" alt="A big gray boar">
+                <img src="./images/pig-hero.jpg" alt="A happy mini pig running in the water">
+            </div>
+        </div>
+        <div class="info">
+            <div class="container">
+                <h2>Some random piggies</h2>
+                <div class="boxes">
+                    <div class="box">
+                        <img src="./images/pig-1.jpg" alt="A big gray boar smiling">
+                        <p>Pigs are super awesome and sweet</p>
+                    </div>
+                    <div class="box">
+                        <img src="./images/pig-2.jpg" alt="A white mini pig chewing on hay">
+                        <p>I really love pigs, they're amazing</p>
+                    </div>
+                    <div class="box">
+                        <img src="./images/pig-3.jpg" alt="A pig with a dirty nose looking into the camera">
+                        <p>So cute, and gentle, and strong</p>
+                    </div>
+                    <div class="box">
+                        <img src="./images/pig-4.jpg" alt="A small red piglet yawning">
+                        <p>Piggies are definitely the best!</p>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
