Add quote section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                 <section class="text">
                     <h1>The piggies are awesome</h1>
                     <p>
-                        This website has some cool and awesome and amazing pigs and some nonsensical text. It's full of love and appreciation towards pigs.
+                        This website has some cool and awesome and amazing pigs and some nonsensical text. 
+                        It's full of love and appreciation towards pigs.
                     </p>
                     <button>Pet a pig</button>
                 </section>
@@ -55,6 +56,16 @@
                 </div>
             </div>
         </div>
+        <section class="quote">
+            <div class="container">
+                <p class="quote-text">
+                    Umm... So pigs are kinda cool, yeah. They can be pink, and red, and brown, and they can be big or 
+                    small. They make funny noises and love playing around. Umm... Like, pigs are totally awesome and 
+                    super cool, you know? Yeah...
+                </p>
+                <p class="quote-author">&mdash; Pig expert</p>
+            </div>
+        </section>
     </main>
     <footer>
 
