Add banner section

--- a/index.html
+++ b/index.html
@@ -66,6 +66,17 @@
                 <p class="quote-author">&mdash; Pig expert</p>
             </div>
         </section>
+        <div class="banner">
+            <div class="container">
+                <div class="banner-box">
+                    <div class="banner-text">
+                        <h2>Call to action! It's time!</h2>
+                        <p>Time to express your love to piggies! Greet them now!</p>
+                    </div>
+                    <button>Pet a pig</button>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
 
