--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
     </main>
     <footer>
-
+        <div class="footer">Copyright &copy; The Odin Project 2024</div>
     </footer>
 </body>
 </html>
