Minor grammar edit

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="hero">
             <div class="container">
                 <section class="text">
-                    <h1>The piggies are awesome</h1>
+                    <h1>Piggies are awesome</h1>
                     <p>
                         This website has some cool and awesome and amazing pigs and some nonsensical text. 
                         It's full of love and appreciation towards pigs.
