Replace section with div
Replaced section property with the div property for the quote as using
section was not semantically correct

--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
                 </div>
             </div>
         </div>
-        <section class="quote">
+        <div class="quote">
             <div class="container">
                 <p class="quote-text">
                     Umm... So pigs are kinda cool, yeah. They can be pink, and red, and brown, and they can be big or small. They make funny noises and love playing around. Umm... Like, pigs are totally awesome and super cool, you know? Yeah...
                 </p>
                 <p class="quote-author">&mdash; Pig expert</p>
             </div>
-        </section>
+        </div>
         <div class="banner">
             <div class="container">
                 <div class="banner-box">
